fixed nav bar, need to add spacing between the elements tho

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,70 @@
 body { 
     background-color: #FCDCD0;
+    font-family: 'Pangolin', cursive;
+    margin: 0;
 }
 
 #homeNav { 
+    position: absolute;
+    height: 45px;
     background-color: #F17B86;
+    margin: 0;
+    padding-top: 15px;
+    padding-bottom: 6px;
+    width: 100%;
+    font-size: 25px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.dropbtn { 
+    color: #28262C;
+    cursor: pointer;
+}
+
+.dropbtn:hover, .dropbtn:focus { 
+    color: white;
+}
+
+.dropdown-content { 
+    display: none;
+    position: absolute;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a { 
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    background: rgba(241, 123, 134, 0.46);
+
+    font-family: 'Pangolin', cursive;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 25px;
+    text-decoration-line: none;
+    color: #28262C;
+
+}
+
+.dropdown-content a:hover { 
+    color: white;
+}
+
+.show {
+    display: block;
+}
+
+.navNames { 
+    color: #28262C;
+    cursor: pointer;
+    text-decoration-line: none;
+}
+
+.navNames:hover { 
+    color: white;
 }
